# reverse_proxy

./: .ansible-lint  .gitignore  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements-monorepo.yml  requirements-standalone.yml  requirements.txt
.ansible/collections/ansible_collections/tcharl/reverse_proxy/: .gitignore  .travis.yml  .yamllint  FILES.json  MANIFEST.json  README.md  pyproject.toml  requirements-collections.yml  requirements-standalone.yml  tox.ini
.ansible/collections/ansible_collections/tcharl/reverse_proxy/.github/workflows/: molecule.yml
.ansible/collections/ansible_collections/tcharl/reverse_proxy/defaults/: main.yml
.ansible/collections/ansible_collections/tcharl/reverse_proxy/meta/: main.yml
.ansible/collections/ansible_collections/tcharl/reverse_proxy/molecule/default/: converge.yml  molecule.yml
.ansible/collections/ansible_collections/tcharl/reverse_proxy/molecule/default/tests/: test_default.py
.ansible/collections/ansible_collections/tcharl/reverse_proxy/molecule/kvm/: converge.yml
.ansible/collections/ansible_collections/tcharl/reverse_proxy/molecule/parallels/: prepare.yml
.ansible/collections/ansible_collections/tcharl/reverse_proxy/tasks/: main.yml  nginx-proxy.yml
.ansible/collections/ansible_collections/tcharl/reverse_proxy/vars/: main.yml
.github/workflows/: release-galaxy.yml
defaults/: main.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml  prepare.yml
molecule/parallels/: converge.yml  (+1 more)
tasks/: nginx-proxy.yml  requirements.yml  virtual-host.yml
templates/: vhost_location.j2
(+1 files in other folders)
